--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
+
+GITHUB_CLIENT=b6fc50003eeb3e067baf
+GITHUB_SECRET=28faed48f7167c5cbdea81d9b39554da822c9ed5
+
+NEXTAUTH_SECRET=wiuWbKhdb991843
